[package]
name = "symexpr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.82.1"
cranelift-jit = "0.82.1"
cranelift-module = "0.82.1"
cranelift-native = "0.82.1"
target-lexicon = "0.12.3"
